Ninth commit. Fixed low contrast on the map

--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,10 @@ footer {
   box-shadow: 0px 0.5px 1.5px rgba(0, 0, 0, 0.25), inset 0px 0.8px 0px -0.25px hsla(0, 0%, 0%, 0.2);
 }
 
+.earth_map{
+  background-color: #9f85d8;
+  background: linear-gradient(180deg, rgb(245, 255, 255) 0%, #0a224e 100%);
+}
 
 /* Style for map buttons */
 .geo_buttons {
